--- a/style.css
+++ b/style.css
@@ -62,6 +62,22 @@ p.shrug{
   height:auto;
 }
 
+.video-container {
+position: relative;
+padding-bottom: 56.25%;
+padding-top: 30px; height: 0; overflow: hidden;
+}
+
+.video-container iframe,
+.video-container object,
+.video-container embed {
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+}
+
 @media (max-width: 600px) {
   #profile{
       width: 40%;
@@ -75,4 +91,9 @@ p.shrug{
     text-align: left;
     width: 140%;
     }
+
+  #logo{
+    width:6%;
+    height:auto;
+  }
 }
