--- a/style.css
+++ b/style.css
@@ -62,6 +62,8 @@ p.shrug{
   height:auto;
 }
 
+
+
 .video-container {
 position: relative;
 padding-bottom: 56.25%;
@@ -72,8 +74,8 @@ padding-top: 30px; height: 0; overflow: hidden;
 .video-container object,
 .video-container embed {
 position: absolute;
-top: 0;
-left: 0;
+top: 0%;
+left: 0%;
 width: 100%;
 height: 100%;
 }
